# task-flow

./: .gitignore  .pre-commit-config.yaml  README.md  db.py  gui.py  main.py  pyproject.toml  timetrack_db.py  timetrack_main.py  timetrack_tui.py  tui.py
.github/workflows/: release.yml
templates/: dashboard.html  stats.html
